feat(embed): Phase-2 embedding retrieval — attribute-anchored, end-to-end
General vector search over any indexable string attribute, injected into agent
context. NO :seon/kind enum — a consumer makes data searchable via
register-embeddable! on any string attr (the attribute IS the type). Functions
(:seon.fn/source) and a knowledge base (:my.kb/body) are two registrations over
ONE :seon/embedding attr + ONE Proximum HNSW index on the JVM wire-server.

Foundation (P2-A.5): durable restore-from-konserve on reopen (datahike fork
connect-if-exists shim @5f62d57f, local), :db.secondary/only, cluster-reset-
robust install! (deletes orphan store), fail-loud on real restore failure. Lazy
+ key-optional Gemini client — a keyless wire-server boots fine, embedding off.

Write (P2-B): augment-tx-with-embeddings in the wire transact handlers, SHA
source-hash cache, ::embed boot hook (install! + bounded backfill).

Query (P2-C): knn-search wire verb + pod search/search-pull (^:async, :where
type-scoping via local-db eids -> Proximum entity-filter).

Context (P2-D1): env-gated (SEON_EMBED_RETRIEVAL, default OFF = byte-identical)
prefetch in run-turn! -> AsyncLocalStorage stash -> relevant-source section in
the volatile cache half, self-bounded; render-hit dispatches by attribute
presence (fns + KB + generic fallback), unscoped whole-index prefetch.

Proven end-to-end on a controlled corpus (real Gemini): right source into the
prompt, KB renders title+body, OFF byte-identical, bounded/additive; full CLJS
suite green (565 tests, 0 failures). Pending: fork push + 4-site sha bump; live
whole-core embedding deploy; rigorous gym-scored A/B (gym :memory isolation).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>